contrast fix

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
   text-align: center;
   margin-top: 0;
   width: 100vw;
-  color: var(--primary-color);
+  color: #d8cec0;
   padding: 10px 0;
 }
 
